Added optimized images
Added images to the image directory. Scaled down to appropriate size. Also added a figure section to the intro (Pisa).

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <!-- Main section of the article -->
       <section class="intro">
         <h2>Intro</h2>
+        <figure>
+          <img class="sectionImage" src="images/IMG_4981.jpg" width="500" alt="the leaning tower of Pisa">
+          <figcaption>The Leaning Tower of Pisa</figcaption>
+        </figure>
         <p>
           Arguably Europe’s most enticing country, Italy charms visitors with
           irresistible food, awesome architecture, diverse scenery and
