Chianti image added
Added the figure section for the Chianti image in Tuscany.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           trip to gorgeously Gothic Siena sees you marvelling at the Italian
           ability to turn buildings into art.
         </p>
+        <figure>
+          <img src="images/IMG_5050.jpg" alt="Chianti Wine">
+          <figcaption>Chianti Wine</figcaption>
+        </figure>
       </section>
     </main>
   </body>
