--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <section class="intro">
         <h2>Intro</h2>
         <figure>
-          <img class="sectionImage" src="images/IMG_4981.jpg" width="500" alt="the leaning tower of Pisa">
+          <img
+            class="sectionImage"
+            src="images/IMG_4981.jpg"
+            width="500"
+            alt="the leaning tower of Pisa"
+          />
           <figcaption>The Leaning Tower of Pisa</figcaption>
         </figure>
         <p>
@@ -48,8 +53,82 @@
           ability to turn buildings into art.
         </p>
         <figure>
-          <img src="images/IMG_5050.jpg" alt="Chianti Wine">
+          <img src="images/IMG_5050.jpg" alt="Chianti Wine" />
           <figcaption>Chianti Wine</figcaption>
+        </figure>
+      </section>
+      <section class="venice">
+        <h3>Bewitching Venice</h3>
+        <figure>
+          <img src="images/IMG_1944.jpg" alt="Limosines in Venice" />
+          <figcaption>Limosines in Venice</figcaption>
+        </figure>
+        <div class="text">
+          <p>
+            To enjoy unique, utterly exquisite Venice, allow a few days. Glide
+            down the Grand Canal, by gondola or vaporetto (water bus), tour the
+            grand Palazzo Ducale, gape at the treasure-filled Basilica di San
+            Marco and run out of camera space snapping the extraordinary array
+            of Venetian architecture. There'll also be time to join the locals
+            shopping at Rialto Market, tuck into cicheti (Venetian tapas) and
+            get a little lost amid the 400 bridges and 150 canals.
+          </p>
+        </div>
+      </section>
+      <section class="milan">
+        <h3>Style and beauty in Milan and the Lakes</h3>
+        <div class="text">
+          <p>
+            For big-city style and legendary landscapes, head to Italy’s
+            northwest. A day in Milan opens up a grand Gothic Duomo (cathedral),
+            Leonardo Da Vinci's Last Supper and world-class opera at La Scala. A
+            short train ride away, belle époque Lake Maggiore harbours the
+            beguiling Borromean Islands, specks of rock crowned by ornate
+            palaces and extravagant gardens. Or spend a few days at glamorous
+            Lake Como revelling in lake-lapped cocktail bars, sumptuous villas,
+            vintage speedboat trips and the snowy-mountains-meets-azure-water
+            scenery.
+          </p>
+        </div>
+        <figure>
+          <img src="images/IMG_0299.jpg" alt="Island in Lake Cuomo" />
+          <figcaption>Lake Cuomo, near Milan</figcaption>
+        </figure>
+      </section>
+      <section class="cinqueterre">
+        <h3>Cinque Terre's harbours and hills</h3>
+        <figure>
+          <img src="images/IMG_0920.jpg" alt="Vernazza, Cinque Terre, Italy" />
+          <figcaption>Vernazza, Cinque Terre, Italy</figcaption>
+        </figure>
+        <div class="text">
+          <p>
+            In Cinque Terre National Park terraced vineyards cling to sheer
+            hills traversed by improbably steep hiking trails, and villages flow
+            down to tiny harbours lined with restaurants and bars. Ferries and a
+            rattling rural train link the five villages. Allow two to four days
+            to hit the walking trails, swim in the sea, soak up the atmosphere
+            and re-charge.
+          </p>
+        </div>
+      </section>
+      <section class="eatdrink">
+        <h3>Eating and drinking</h3>
+        <div class="text">
+          <p>
+            The diversity of regional cuisine alone is worth travelling to Italy
+            for. Bistecca alla fiorentina (Florence's iconic T-bone steak);
+            creamy Po plains risotto; olive oil and lemon-laced grilled fish on
+            Elba; espresso and sweet treats in Naples' backstreets bars;
+            fresh-from-the-wood-oven pizza al taglio (pizza by the slice) in
+            Rome. And as for sampling Brunello, Chianti, Prosecco, Montepulciano
+            and Soave wines in historic cellars and in restaurants just yards
+            from the vines – that’s an experience that lingers for life.
+          </p>
+        </div>
+        <figure>
+          <img src="images/IMG_0519.jpg" alt="Bar in Milan" />
+          <figcaption>A Bar in Milan</figcaption>
         </figure>
       </section>
     </main>
