Trying to go back
Previous commit fixed the bug, but now I'm attempting to go back referencing the original chianti image.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           ability to turn buildings into art.
         </p>
         <figure>
-          <img src="images/old-IMG_5050.jpg" alt="Chianti Wine" />
+          <img src="images/IMG_5050.jpg" alt="Chianti Wine" />
           <figcaption>Chianti Wine</figcaption>
         </figure>
       </section>
