--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@
           <figcaption>A Bar in Milan</figcaption>
         </figure>
       </section>
+      <section class="tips">
+        <h3>Practical Tips</h3>
+        <figure>
+          <img src="images/IMG_0359.jpg" alt="Interior of the Milan Cathedral">
+          <figcaption>The interior of the Milan Cathedral</figcaption>
+        </figure>
+        <div class="text">
+
+          <ul>
+            <li>When greeting people, shake hands or kiss both cheeks and say buongiorno (good day) or buona sera (good evening). Only use first names if invited.</li>
+            <li>Restaurants have a cover charge (coperto) of €2-3. If service isn’t included, a small tip may well prompt a smile.</li>
+            <li>When visiting religious sites avoid offence by dressing modestly: cover shoulders, torsos and thighs. Although shorts and sandals are fine for the beach, you'll need smart-casual clothes for towns. Walking shoes make cobbled streets
+              and hill paths more comfortable, as will a sunhat, sunscreen and sunglasses.</li>
+            <li>In the main tourist centres English is fairly widely spoken, but in rural areas and south of Rome learning a few key expressions and using a phrasebook/phone app with a menu guide will make your visit more fun and mealtimes more
+              enjoyable.</li>
+          </ul>
+        </div>
+
+      </section>
     </main>
   </body>
 </html>
