--- a/index.html
+++ b/index.html
@@ -151,5 +151,6 @@
 
       </section>
     </main>
+    <footer>This article was originally published October 2015. It was updated May 2019.</footer>
   </body>
 </html>
